removed fixed white space code

--- a/webStyle.css
+++ b/webStyle.css
@@ -42,8 +42,3 @@ footer{
 
     font-family: 'Spinnaker', sans-serif;
 }
-
-.navbar-nav li a {
-    height: 70px;
-    padding-top: 0;
-}
